[project]
name = "test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "dotenv>=0.9.9",
    "fastapi[all]>=0.120.2",
    "pydantic>=2.12.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]
